# zaberov_myshop_19

./: .env.simple  .gitignore  dump.rdb  pyproject.toml
account/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
account/management/commands/: csu.py
account/migrations/: 0001_initial.py  0002_user_email_verify.py  0003_user_country.py  0004_alter_user_email_verify.py  0005_user_username.py  0006_remove_user_username.py
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_rename_created_post_created_at_and_more.py  0002_alter_post_options_rename_created_post_date_created_and_more.py  0003_alter_post_date_publish.py  0003_rename_status_post_is_published.py  0004_alter_post_date_publish.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/messages/: messages.json
catalog/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py  0003_alter_product_category.py  0004_contacts.py  0005_alter_product_options_product_is_active.py  0006_alter_product_options_and_more.py  0007_version.py  0008_alter_version_options.py  0009_alter_version_is_active.py  0010_alter_version_is_active_alter_version_name_version_and_more.py  0011_alter_version_name_version.py  0012_product_user.py  0013_alter_product_options_product_is_published.py  0014_alter_product_is_published.py
catalog/templatetags/: catalog_tags.py
catalog/utils/: utils.py
core/: settings.py  urls.py
fixtures/: account_data.json  blog_data.json  catalog_data.json
(+38 files in other folders)
