[tool.poetry]
name = "zaberov-myshop-19"
version = "0.1.0"
description = ""
authors = ["zaberov.dv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.8"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.20.0"
django-forms-bootstrap = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
